--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,15 @@
         }
     ],
     "require": {
-        "composer-plugin-api": "^2.0"
+        "composer-plugin-api": "^2.0",
+        "composer/installers": "^2.0"
     },
     "require-dev": {
         "composer/composer": "^2.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
     }
 }
